customer-apps/cust1/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "cust1-team01-preprod-cd"
  labels:
    dt.owner: "team01"
  annotations:
    keptn.sh/lifecycle-toolkit: "false"
