customer-apps/cust1/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "cust1-team01"
  namespace: "cust1-team01-preprod-cd"
  labels:
    dt.owner: "team01"
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: "userinterface"
